--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "react-router-dom": "^6.3.0"
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.4",
+    "react-router-dom": "^6.3.0",
+    "validator": "^13.7.0"
   },
   "name": "jobhere",
   "version": "1.0.0",
