--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "react-router-dom": "^6.3.0",
