--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "react-router-dom": "^6.3.0",
+    "update": "^0.7.4",
     "validator": "^13.7.0"
   },
   "name": "jobhere",
