--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.4.0",
+    "helmet": "^5.1.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
@@ -13,13 +16,20 @@
     "morgan": "^1.10.0",
     "react-router-dom": "^6.3.0",
     "update": "^0.7.4",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
+  },
+  "engines":{
+      "node":"18.x"
   },
   "name": "jobhere",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "build-client": "cd client && npm run build",
+    "install-client": "cd client && npm install", 
+    "heroku-postbuild" : "npm run install-client && npm run build-client",
     "server": "nodemon server --ignore client",
     "client": "npm start --prefix client",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \" npm run client \""
